--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      body {
+        display: flex;
+        justify-content: center;
+        margin-top: 30px;
+        background-color: rgb(8, 3, 40);
+      }
+    </style>
   </head>
   <body>
     <div id="rectangle"></div>
